--- a/quran.com-frontend-next/locales/bn/media.json
+++ b/quran.com-frontend-next/locales/bn/media.json
@@ -30,5 +30,8 @@
   "to": "থেকে",
   "verse-key": "অধ্যায় এবং পদ সংখ্যা যেমন 2:255",
   "video-picker": "ব্যাকগ্রাউন্ড ভিডিও",
-  "your-link": "আপনার লিঙ্কটি কপি করুন"
+  "your-link": "আপনার লিঙ্কটি কপি করুন",
+  "translation-audio": "অনুবাদ অডিও",
+  "translation-audio-none": "কোনোটাই না",
+  "translation-audio-urdu": "উর্দু"
 }
