--- a/quran.com-frontend-next/locales/fr/media.json
+++ b/quran.com-frontend-next/locales/fr/media.json
@@ -30,5 +30,8 @@
   "to": "à",
   "verse-key": "Chapitre et numéro d'Ayah, par exemple 2:255",
   "video-picker": "Vidéo d'arrière-plan",
-  "your-link": "Copiez votre lien"
+  "your-link": "Copiez votre lien",
+  "translation-audio": "Audio de traduction",
+  "translation-audio-none": "Aucun",
+  "translation-audio-urdu": "Ourdou"
 }
