--- a/quran.com-frontend-next/locales/ms/media.json
+++ b/quran.com-frontend-next/locales/ms/media.json
@@ -30,5 +30,8 @@
   "to": "kepada",
   "verse-key": "Nombor Bab dan Ayat cth 2:255",
   "video-picker": "Video latar belakang",
-  "your-link": "Salin pautan anda"
+  "your-link": "Salin pautan anda",
+  "translation-audio": "Audio terjemahan",
+  "translation-audio-none": "Tiada",
+  "translation-audio-urdu": "Urdu"
 }
