--- a/quran.com-frontend-next/locales/nl/media.json
+++ b/quran.com-frontend-next/locales/nl/media.json
@@ -30,5 +30,8 @@
   "to": "naar",
   "verse-key": "Hoofdstuk- en versnummer bijv. 2:255",
   "video-picker": "Achtergrondvideo",
-  "your-link": "Kopieer uw link"
+  "your-link": "Kopieer uw link",
+  "translation-audio": "Vertaling audio",
+  "translation-audio-none": "Geen",
+  "translation-audio-urdu": "Urdu"
 }
