--- a/quran.com-frontend-next/locales/sq/media.json
+++ b/quran.com-frontend-next/locales/sq/media.json
@@ -30,5 +30,8 @@
   "to": "te",
   "verse-key": "Numri i kapitullit dhe vargut p.sh. 2:255",
   "video-picker": "Video në sfond",
-  "your-link": "Kopjoni lidhjen tuaj"
+  "your-link": "Kopjoni lidhjen tuaj",
+  "translation-audio": "Audio përkthimi",
+  "translation-audio-none": "Asnjë",
+  "translation-audio-urdu": "Urdu"
 }
