--- a/quran.com-frontend-next/locales/sw/media.json
+++ b/quran.com-frontend-next/locales/sw/media.json
@@ -30,5 +30,8 @@
   "to": "hadi",
   "verse-key": "Sura na Nambari ya Aya km 2:255",
   "video-picker": "Video ya usuli",
-  "your-link": "Nakili kiungo chako"
+  "your-link": "Nakili kiungo chako",
+  "translation-audio": "Sauti ya tafsiri",
+  "translation-audio-none": "Hakuna",
+  "translation-audio-urdu": "Urdu"
 }
