--- a/quran.com-frontend-next/locales/ur/media.json
+++ b/quran.com-frontend-next/locales/ur/media.json
@@ -30,5 +30,8 @@
   "to": "کو",
   "verse-key": "باب اور آیت نمبر 2:255",
   "video-picker": "پس منظر کی ویڈیو",
-  "your-link": "اپنا لنک کاپی کریں۔"
+  "your-link": "اپنا لنک کاپی کریں۔",
+  "translation-audio": "ترجمہ آڈیو",
+  "translation-audio-none": "کچھ نہیں",
+  "translation-audio-urdu": "اردو"
 }
